# fileforge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: compare.rs  encoding.rs  entropy.rs  frequency.rs  hexdump.rs  lib.rs  magic.rs  main.rs  strings.rs
