[package]
name = "fileforge"
version = "0.1.0"
edition = "2021"
description = "Universal binary analysis toolkit — detect file types by magic bytes, compute entropy, analyze byte frequencies, detect encodings, and parse structural headers"
license = "MIT"
repository = "https://github.com/EdgarOrtegaRamirez/fileforge"
keywords = ["binary", "analysis", "entropy", "forensics", "file-type"]
categories = ["command-line-utilities", "parser-implementations", "encoding"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
opt-level = 3
lto = true
